# Vookoo

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  main.cpp  vulkan-triangle.sln  vulkan-triangle.vcxproj  vulkan-triangle.vcxproj.filters
Vookoo1.0/examples/: CMakeLists.txt
Vookoo1.0/examples/data/: simple.xcf  teapot.blend  teapot.blend1  teapot.dump  texture.vert
Vookoo1.0/examples/marching_cubes/: main.cpp  marching_cubes.vcxproj  mesh.frag  mesh.vert.spv
Vookoo1.0/examples/shaders/: CMakeLists.txt  mesh.vert  simple.vert
Vookoo1.0/examples/teapot/: mesh.frag  mesh.vert  shapes.unity  teapot.vcxproj
Vookoo1.0/examples/texture/: CMakeLists.txt
Vookoo1.0/examples/triangle_image/: .clang_complete
base/: vulkandebug.h  vulkanexamplebase.cpp  vulkanexamplebase.h  vulkanswapchain.hpp  vulkantools.cpp  vulkantools.h
doc/html/: annotated.html  classes.html  classvku_1_1_depth_stencil_image-members.html  classvku_1_1_depth_stencil_image.html  classvku_1_1_descriptor_set_layout_maker-members.html  classvku_1_1_descriptor_set_layout_maker.html  classvku_1_1_descriptor_set_maker-members.html  classvku_1_1_descriptor_set_maker.html  classvku_1_1_descriptor_set_updater-members.html  classvku_1_1_descriptor_set_updater.html  classvku_1_1_framework-members.html  classvku_1_1_framework.html  classvku_1_1_generic_buffer-members.html  classvku_1_1_generic_buffer.html  classvku_1_1_generic_image-members.html  classvku_1_1_generic_image.html  classvku_1_1_index_buffer-members.html  classvku_1_1_index_buffer.html  classvku_1_1_k_t_x_file_layout-members.html  classvku_1_1_k_t_x_file_layout.html  classvku_1_1_pipeline_layout_maker-members.html  classvku_1_1_pipeline_layout_maker.html  classvku_1_1_pipeline_maker-members.html  classvku_1_1_pipeline_maker.html  classvku_1_1_renderpass_maker-members.html  classvku_1_1_renderpass_maker.html  classvku_1_1_sampler_maker-members.html  classvku_1_1_sampler_maker.html  classvku_1_1_shader_module-members.html  classvku_1_1_shader_module.html  classvku_1_1_texture_image2_d-members.html  classvku_1_1_texture_image2_d.html  classvku_1_1_texture_image_cube-members.html  classvku_1_1_texture_image_cube.html  classvku_1_1_uniform_buffer-members.html  classvku_1_1_uniform_buffer.html  classvku_1_1_vertex_buffer-members.html  classvku_1_1_vertex_buffer.html  classvku_1_1_window-members.html  classvku_1_1_window.html  (+17 more)
examples/: CMakeLists.txt  examples.sln  firstgame.cpp  firstgame.data  firstgame.frag  firstgame.vert  firstgame.xcf  helloTriangle.cpp  molvoo.cpp  molvoo.frag  molvoo.vert  teapot.cpp  teapot.fbx  teapot.frag  teapot.vert  texture.cpp  texture.vert  trypsin.cpp  trypsin.frag
examples/crystalLogo/: Inspiration.README  content.frag  content.vert  crystalLogo.cpp  cube.frag  cube.vert  imag_logo.c  imag_text1.c  imag_text2.c  reflectionPlane.frag  reflectionPlane.vert  reflectionReflector.frag  reflectionReflector.vert
examples/cybertruck/: cybertruck.cpp  cybertruck.frag  cybertruck.vert~
examples/data/: teapot.blend  teapot.blend1  teapot.fbx  texture.frag
examples/data/shaders/: mesh.frag  mesh.vert
examples/dynamicUniformBuffer/: dynamicUniformBuffer.cpp  dynamicUniformBuffer.vert
examples/fdtd2d/: fdtd2d.cpp  fdtd2d.vert  fdtd2dpass0.frag  fdtd2dpass1.frag  fdtd2dpass2.frag  references.txt
examples/fdtd2dUpml/: fdtd2dUpml.cpp  fdtd2dUpmlpass0.frag  fdtd2dUpmlpass1.frag  fdtd2dUpmlpass2.frag
examples/firstgame/: firstgame.cpp  firstgame.data  firstgame.frag
examples/flockaroo/: advection.frag  flockaroo.cpp  flockaroo.frag
examples/glfw/: CMakeLists.txt  main.cpp
examples/gumbo/: GumboTranslatedScaledTransposed97to108.h  gumbo.cpp  gumbo.frag  gumbo.geom  gumbo.tesc  gumbo.tese  gumbo.vert
examples/helloCompute/: helloCompute.comp  helloCompute.cpp
examples/helloGeometryShader/: helloGeometryShader.cpp  helloGeometryShader.frag  helloGeometryShader.geom  helloGeometryShader.vert
examples/helloInstancing/: helloInstancing.cpp  helloInstancing.vert
examples/helloTesselationShader/: helloTesselationShader.cpp  helloTesselationShader.geom  helloTesselationShader.tesc  helloTesselationShader.tese  helloTesselationShader.vert
examples/helloTriangle/: helloTriangle.cpp  helloTriangle.frag  helloTriangle.vert
examples/marching_cubes/: CMakeLists.txt  main.cpp  marching_cubes.vcxproj  mesh.frag.spv  mesh.vert
examples/molvoo/: atoms.frag  atoms.vert  conns.frag  conns.vert  dynamics.comp  fount.frag  fount.vert  molvoo.comp  molvoo.cpp  molvoo.frag  molvoo.vert  skybox.frag  skybox.vert
examples/perlinNoise/: perlinNoise.cpp  perlinNoise.frag  perlinNoise.vert  readme.txt
examples/pushConstants/: pushConstants.cpp  pushConstants.frag  pushConstants.vert
examples/renderToCubemapByMultiview/: renderToCubemapByMultiview.cpp  renderToCubemapByMultiview.frag  renderToCubemapByMultiview.vert  renderToCubemapByMultiviewPass2.frag  renderToCubemapByMultiviewPass2.vert
examples/shaders/: CMakeLists.txt  mesh.vert  simple.frag  texture.frag  texture.vert
examples/subpass/: icosphereGenerator.hpp  subpass.cpp  subpass_0_scene.frag  subpass_0_scene.vert  subpass_1_composition.frag  subpass_1_composition.vert  subpass_2_fx.frag  subpass_3_decal.frag  subpass_3_decal.vert
examples/swirltexture/: swirltexture.cpp  swirltexture.frag  swirltexture.vert
examples/teapot/: CMakeLists.txt  main.cpp  mesh.vert  teapot.cpp  teapot.vcxproj  teapot.vcxproj.filters  teapot.vert
examples/texture/: main.cpp  texture.cpp  texture.frag  texture.frag.spv  texture.vcxproj  texture.vcxproj.filters  texture.vert  texture.vert.spv
examples/threaded/: threaded.cpp  threaded.vert
examples/triangle/: CMakeLists.txt  build.sh  main.cpp  mesh.vert  mesh.vert.spv  triangle  triangle.vcxproj
examples/triangle_image/: CMakeLists.txt  Makefile  main.cpp  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  triangle_image.vcxproj  triangle_image.vcxproj.filters
examples/uniforms/: uniforms.cpp  uniforms.frag  uniforms.vert
include/: mesh.hpp  vku.hpp
src/: main.cpp  vk_cpp.h  vkpp.hpp  vku.hpp
(+78 files in other folders)
